# trampoline-rs

./: Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  opts.rs
src/handlers/: create_ckb_dapp.rs  deploy.rs  faucet.rs  mod.rs  new_project.rs  pw_config.rs
src/rpc/: mod.rs  sdk_client.rs
src/sdk/: base.rs  mod.rs
templates/: Dockerfile.template  Makefile.template
templates/ckb_dev/dev_keys/: miner
templates/dapp/dapp_template/: README.md  package.json  template.json
templates/dapp/dapp_template/template/public/: index.html
templates/dapp/dapp_template/template/src/: App.css  App.tsx
templates/dapp/dapp_template/template/src/collectors/: BasicCollector.ts
templates/dapp/dapp_template/template/src/components/: Balance.tsx  Wallet.tsx  WalletDetails.tsx
templates/dapp/dapp_template/template/src/helpers/: constants.ts
templates/trampoline/: Dockerfile.template  Makefile.template  ckb-hashes.toml  pwLockBin.js  pw_lock_mainnet  pw_lock_testnet  trampoline.toml
templates/trampoline/ckb_dev/: ckb-miner.toml  ckb.toml
templates/trampoline/ckb_dev/dev_keys/: genesis1  genesis2
templates/trampoline/ckb_dev/specs/: dev.toml
