[package]
name = "trampoline"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
ckb-jsonrpc-types = "0.43.2"
ckb-types = "0.43.2"
faster-hex = "0.6.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
structopt = "0.3.23"
tera = "1.12.1"
tokio = {version = "1.11.0", features = ["macros"] }
includedir = "0.6"
phf = "0.8"

[build-dependencies]
includedir_codegen = "0.6"