[package]
name = "trampoline"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
ckb-jsonrpc-types = "0.43.0"
ckb-types = "0.43.0"
faster-hex = "0.6.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
structopt = "0.3.23"
tera = "1.12.1"
tokio = {version = "1.11.0", features = ["macros"] }
includedir = "0.6"
phf = "0.8"
ckb-sdk = "0.43.0"
toml = "0.5.8"
hex = "0.4.3"
tempfile = "3.1.0"
k256 = "0.9.6"
tiny-keccak = {version ="2.0.2" , features = ["sha3"]}
ckb-crypto = "0.100.0"
bech32 = "0.8.1"
ckb-hash = "0.100.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
tracing = {version = "0.1.28"}

[build-dependencies]
includedir_codegen = "0.6"
